--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      console.log(`
+           _____         _                 _     _     _       
+          |_   _|__   __| | ___           | |   (_)___| |_     
+            | |/ _ \\ / _  |/ _ \\   _____  | |   | / __| __|    
+            | | (_) | (_| | (_) | |_____| | |___| \\__ \\ |_     
+            |_|\\___/ \\___ |\\___/          |_____|_|___/\\__|    
+                                                               
+        `);
+    </script>
   </body>
 </html>
