--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/Todo-List/manifest.json"><link rel="shortcut icon" href="/Todo-List/favicon.ico"><title>React App</title><link href="/Todo-List/static/css/main.92de4292.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="app"></div><script>console.log(`
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/Todo-List/manifest.json"><link rel="shortcut icon" href="/Todo-List/favicon.ico"><title>TODO-List</title><link href="/Todo-List/static/css/main.080e53cc.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="app"></div><script>console.log(`
            _____         _                 _     _     _       
           |_   _|__   __| | ___           | |   (_)___| |_     
             | |/ _ \\ / _  |/ _ \\   _____  | |   | / __| __|    
             | | (_) | (_| | (_) | |_____| | |___| \\__ \\ |_     
             |_|\\___/ \\___ |\\___/          |_____|_|___/\\__|    
                                                                
-        `);</script><script type="text/javascript" src="/Todo-List/static/js/main.3699ba3b.js"></script></body></html>
+        `);</script><script type="text/javascript" src="/Todo-List/static/js/main.70f3d1e5.js"></script></body></html>
